--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ body {
     color: #f8f9fa;
 }
 
+body.light-mode #toggle-dark-mode {
+    color: #000;
+}
+
+body.dark-mode #toggle-dark-mode {
+    color: #fff;
+}
+
 /* Navbar Styling */
 .navbar {
     transition: background-color 0.3s ease, color 0.3s ease;
