--- a/css/styles.css
+++ b/css/styles.css
@@ -142,18 +142,20 @@ body.dark-mode #contact i {
     color: var(--inverted-text-color);
 }
 
-/* Dark Mode Fixes */
+/* Text styles */
+
 .text-inverted {
     color: var(--inverted-text-color) !important;
-}
-
-.section-title {
-    color: var(--text-color);
-    text-align: center;
-    margin-bottom: 2rem;
 }
 
 .text-muted {
     color: var(--text-color) !important;
 }
 
+/* Fixes */
+
+@media (max-width: 992px) {
+    #navSeparator {
+        display: none !important;
+    }
+}
