--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ body {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+p {
+    font-family: 'Inconsolata', monospace;    
+}
+
 #toggle-dark-mode {
     color: var(--navbar-text);
 }
@@ -61,11 +65,6 @@ body {
     text-align: center;
     color: white;
     z-index: 1;
-}
-
-.hero h1 {
-    font-size: 3rem;
-    margin: 0;
 }
 
 .hero::before {
@@ -120,12 +119,6 @@ body {
 }
 
 /* Contact Section */
-#contact i {
-    display: block;
-    margin-bottom: 0.5rem;
-    color: var(--text-color);
-}
-
 #contact .shadow {
     background-color: var(--card-bg);
     color: var(--text-color);
@@ -138,8 +131,8 @@ body {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-body.dark-mode #contact i {
-    color: var(--inverted-text-color);
+body.dark-mode #contact img {
+    filter: invert(1);
 }
 
 /* Text styles */
