--- a/css/styles.css
+++ b/css/styles.css
@@ -28,15 +28,20 @@ p {
     font-family: 'Inconsolata', monospace;    
 }
 
-#toggle-dark-mode {
-    color: var(--navbar-text);
-}
-
 /* Navbar Styling */
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1030;
     background-color: var(--navbar-bg) !important;
     color: var(--navbar-text);
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease-in-out; 
+}
+
+.navbar.hidden {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
 }
 
 .navbar .nav-link {
@@ -51,11 +56,15 @@ p {
     color: var(--navbar-text);
 }
 
+#toggle-dark-mode {
+    color: var(--navbar-text);
+}
+
 /* Hero Section */
 .hero {
     position: relative;
     height: 100vh;
-    background-image: url('../assets/pexels-lum3n-44775-1410226.jpg');
+    background-image: url('../assets/hero-bg.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
