--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
     --bg-color: #f8f9fa;
     --text-color: #212529;
+    --text-muted: #343a40;
     --navbar-bg: #ffffff;
     --navbar-text: #000;
     --card-bg: #fff;
@@ -11,6 +12,7 @@
 body.dark-mode {
     --bg-color: #212529;
     --text-color: #f8f9fa;
+    --text-muted: #cfd4d6;
     --navbar-bg: #343a40;
     --navbar-text: #fff;
     --card-bg: #343a40;
@@ -98,6 +100,10 @@ p {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+body.dark-mode .card {
+    background-color: var(--card-bg);
+}
+
 .modal-body img {
     max-width: 100%;
     max-height: 80vh;
@@ -147,18 +153,25 @@ body.dark-mode #contact img {
     filter: invert(1);
 }
 
-/* Text styles */
+#copiedMessage {
+    z-index: 1050;
+    transition: opacity 0.3s ease;
+}
+#copiedMessage.show {
+    display: block;
+}
 
+
+/* Text styles */
 .text-inverted {
     color: var(--inverted-text-color) !important;
 }
 
-.text-muted {
-    color: var(--text-color) !important;
+body.dark-mode .text-muted {
+    color: var(--text-muted) !important;
 }
 
 /* Fixes */
-
 @media (max-width: 992px) {
     #navSeparator {
         display: none !important;
